--- a/marmelad/_blocks/article-thumb/article-thumb.styl
+++ b/marmelad/_blocks/article-thumb/article-thumb.styl
@@ -62,6 +62,20 @@
     display: flex
     flex-direction: column
     width: 100%
+    position: relative
+
+  &__number
+    font-size: 122px
+    color: #9900FF
+    font-family: $fonts.textFont
+    font-weight: 400
+    line-height: 1.1
+    text-align: center
+    position: absolute
+    top: -75px
+    left: 50%
+    transform: translateX(-50%)
+    z-index: 2
 
   &__img
     text-align: center
@@ -210,6 +224,7 @@
     font-weight: 500
     line-height: 1
     text-align: center
+    text-decoration: none
     letter-spacing: 0.5px
     padding: 4px 8px
     background-color: rgba(211, 206, 214, 0.16)
