--- a/marmelad/_blocks/material-list/material-list.styl
+++ b/marmelad/_blocks/material-list/material-list.styl
@@ -30,6 +30,10 @@
         font-size: 28px
         margin-bottom: 10px
 
+      a
+        color: #9900FF
+        text-decoration: none
+
   &__text
     font-size: 20px
     color: #1E0B2E
@@ -43,6 +47,16 @@
 
       &:last-child
         margin-bottom: 0
+
+  &__find-articles
+    font-size: 14px
+    color: #1E0B2E
+    font-family: $fonts.additionalFont
+    font-weight: 400
+    line-height: 1.1
+    text-align: center
+    letter-spacing: 5px
+    text-transform: uppercase
 
   &__items
     display: flex
