--- a/marmelad/_blocks/material-list/material-list.styl
+++ b/marmelad/_blocks/material-list/material-list.styl
@@ -30,7 +30,7 @@
         font-size: 28px
         margin-bottom: 10px
 
-      a
+      span
         color: #9900FF
         text-decoration: none
 
