--- a/marmelad/_blocks/next-article/next-article.styl
+++ b/marmelad/_blocks/next-article/next-article.styl
@@ -128,6 +128,15 @@
   &__author
     display: flex
     align-items: center
+    text-decoration: none
+
+    &:hover
+      & ^[0]
+        &__author-pic
+          border-color: #9900FF
+
+        &__author-name
+          color: #9900FF
 
   &__author-pic
     flex: 0 0 48px
@@ -136,6 +145,8 @@
     height: 48px
     border-radius: 50%
     border: 3px solid #F2F2F2
+    margin-right: 3px
+    transition: border-color 0.3s, ease 0.3s
 
     img
       vertical-align: top
@@ -149,12 +160,14 @@
       font-weight: 400
       line-height: 1.1
       display: block
+      transition: color 0.3s, ease 0.3s
 
     span
       font-size: 14px
       font-weight: 500
       line-height: 1.1
       display: block
+      transition: color 0.3s, ease 0.3s
 
   &__reading-time
     font-size: 14px
