added search page & more

--- a/marmelad/_blocks/article-content/article-content.styl
+++ b/marmelad/_blocks/article-content/article-content.styl
@@ -345,28 +345,28 @@
       top: 0
       left: 0
 
-  // &__list
-  //   position: relative
-  //   text-align: center
+  &__img-content
+    position: relative
+    text-align: center
 
-  //   @media (max-width: 959px)
-  //     margin-bottom: 30px
+    @media (max-width: 959px)
+      margin-bottom: 30px
 
-  //   img
-  //     vertical-align: top
-  //     position: absolute
-  //     top: 50%
-  //     right: -150px
-  //     transform: translateY(-50%)
+    img
+      vertical-align: top
+      position: absolute
+      top: 50%
+      right: -150px
+      transform: translateY(-50%)
 
-  //     @media (max-width: 1023px)
-  //       right: 0
+      @media (max-width: 1023px)
+        right: 0
 
-  //     @media (max-width: 959px)
-  //       position: static
-  //       top: 0
-  //       right: 0
-  //       transform: translateY(0)
+      @media (max-width: 959px)
+        position: static
+        top: 0
+        right: 0
+        transform: translateY(0)
 
   &__find-answer
     background-color: #FBF7FC
