added podcasts page and blocks & more fix

--- a/marmelad/_blocks/articles-day/articles-day.styl
+++ b/marmelad/_blocks/articles-day/articles-day.styl
@@ -40,7 +40,7 @@
       position: sticky
       top: 0
       z-index: 50
-      
+
     @media (min-height: 660px)
       position: sticky
       top: 0
@@ -114,7 +114,7 @@
 
     &--slider
       min-height: 660px
-      position relative
+      position: relative
 
       @media (max-width: 1279px)
         flex: 0 0 320px
@@ -146,6 +146,7 @@
       @media (max-width: 767px)
         flex: 1 1 auto
         max-width: none
+        margin-left: 0
         margin-right: 0
 
       & ^[0]
@@ -166,6 +167,7 @@
       @media (max-width: 767px)
         flex: 1 1 auto
         width: 100%
+        margin-left: 0
         max-width: 100%
 
       & ^[0]
