--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -80,6 +80,7 @@ h2
     top: 50%
     left: 50%
     transform: translate(-50%, -50%)
+    transform-origin: left top
     transition: width 0.3s, height 0.3s, background-color 0.3s, ease-in 0.3s
     border-radius: 50%
 
@@ -108,3 +109,4 @@ h2
         width: 200px
         height: 200px
         background-color: #8B00FD
+        border-radius: 50%
