added podcasts single page

--- a/marmelad/_blocks/podcasts-list/podcasts-list.styl
+++ b/marmelad/_blocks/podcasts-list/podcasts-list.styl
@@ -3,6 +3,17 @@
   border-bottom: 1px solid #ECE4F0
   margin-bottom: 50px
 
+  &--single
+    margin-bottom: 0
+
+    & ^[0]
+      &__head
+        margin-bottom: 0
+        border-bottom: none
+
+    .podcast-thumb
+      max-width: 100%
+
   &__head
     border-bottom: 1px solid #ECE4F0
     padding-bottom: 40px
