added podcasts detailed page

--- a/marmelad/_blocks/article-thumb-detailed/article-thumb-detailed.styl
+++ b/marmelad/_blocks/article-thumb-detailed/article-thumb-detailed.styl
@@ -98,6 +98,8 @@
       vertical-align: top
 
   &__info
+    text-align: center
+
     @media (max-width: 639px)
       flex: 0 0 110px
       width: 110px
@@ -129,6 +131,8 @@
     margin-bottom: 15px
     padding-right: 10px
     padding-left: 10px
+    display: inline-block
+    vertical-align: top
     position: relative
 
     &:before, &:after
@@ -251,11 +255,6 @@
       margin-right: 0
 
   &__text
-    font-size: 20px
-    font-family: $fonts.textFont
-    line-height: 1.2
-    font-weight: 400
-    color: #000000
     margin-bottom: 15px
 
     h3
