fix button on hover

--- a/marmelad/_blocks/all-articles/all-articles.styl
+++ b/marmelad/_blocks/all-articles/all-articles.styl
@@ -68,4 +68,6 @@
         background-image: url("data:image/svg+xml,%3Csvg width='16' height='9' viewBox='0 0 16 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.5 1L8 7.5L1.5 1' stroke='%23fff' stroke-width='2'/%3E%3C/svg%3E%0A")
 
       &:after
-        transform: scale(7) translate(-8%, -8%)
+        // transform: scale(7) translate(-8%, -8%)
+        width: 1300px
+        height: 1300px
