--- a/marmelad/_blocks/hero/hero.styl
+++ b/marmelad/_blocks/hero/hero.styl
@@ -82,4 +82,6 @@
     &:hover
       &:after
         @media (max-width: 479px)
-          transform: scale(2) translate(-50%, -50%)
+          // transform: scale(2) translate(-50%, -50%)
+          width: 400px
+          height: 400px
