--- a/marmelad/_blocks/_footer/footer.styl
+++ b/marmelad/_blocks/_footer/footer.styl
@@ -291,15 +291,14 @@
       position: relative
       z-index: 1
 
-    &:after
-      transform-origin: center
-
     &:hover
       &:before
         background-image: url("data:image/svg+xml,%3Csvg width='15' height='10' viewBox='0 0 15 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 8.5L7.5 2L1 8.5' stroke='%231E0B2E' stroke-width='2'/%3E%3C/svg%3E%0A")
 
       &:after
-        transform: scale(6.2) translate(-50%, -50%)
+        // transform: scale(6.2) translate(-50%, -50%)
+        width: 1300px !important
+        height: 1300px !important
 
   &__info
     @media (max-width: 767px)
