--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -74,8 +74,8 @@ h2
 
   &:after
     content: ''
-    width: 5px
-    height: 5px
+    width: 0
+    height: 0
     position: absolute
     top: 50%
     left: 50%
@@ -102,11 +102,11 @@ h2
     border-color: #1E0B2E
 
     &:hover
-      border-color: #8B00FD
+      border-color: transparent
       color: #fff
 
       &:after
         width: 200px
         height: 200px
         background-color: #8B00FD
-        border-radius: 50%
+        border-radius: 50%      
