--- a/marmelad/_blocks/article-content/article-content.styl
+++ b/marmelad/_blocks/article-content/article-content.styl
@@ -352,7 +352,7 @@
     text-align: center
 
     @media (max-width: 1023px)
-      margin-right 0
+      margin-right: 0
 
     @media (max-width: 767px)
       text-align: center
@@ -424,7 +424,9 @@
 
       &:hover
         &:after
-          transform: scale(2) translate(-50%, -50%)
+          // transform: scale(2) translate(-50%, -50%)
+          width: 500px
+          height: 500px
 
         &:before
           background-image: url("data:image/svg+xml,%3Csvg width='16' height='10' viewBox='0 0 16 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.5 8.5L8 2L1.5 8.5' stroke='%23fff' stroke-width='2'/%3E%3C/svg%3E%0A")
