--- a/marmelad/_blocks/next-article/next-article.styl
+++ b/marmelad/_blocks/next-article/next-article.styl
@@ -220,4 +220,6 @@
 
     &:hover
       &:after
-        transform: scale(6.2) translate(-50%, -50%)
+        // transform: scale(6.2) translate(-50%, -50%)
+        width: 1300px
+        height: 1300px
