added about project page & more

--- a/marmelad/_blocks/first-screen/first-screen.styl
+++ b/marmelad/_blocks/first-screen/first-screen.styl
@@ -9,3 +9,8 @@
 
   @media (max-width: 767px)
     padding-bottom: 0
+
+  &--inner-page
+    @media (max-width: 1232px)
+      padding-top: 30px !important
+      padding-top: 30px !important
