--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -39,6 +39,14 @@ h2
   margin-top: 0
   margin-bottom: 30px
 
+p
+  font-size: 20px
+  color: #1E0B2E
+  font-family: $fonts.textFont
+  font-weight: 500
+  line-height: 1.3
+  margin-top: 0
+
 .contain
   max-width: 1216px + 8px + 8px
   width: 100%
@@ -109,4 +117,4 @@ h2
         width: 200px
         height: 200px
         background-color: #8B00FD
-        border-radius: 50%      
+        border-radius: 50%
