--- a/marmelad/_blocks/article-thumb-detailed/article-thumb-detailed.styl
+++ b/marmelad/_blocks/article-thumb-detailed/article-thumb-detailed.styl
@@ -6,6 +6,9 @@
     border-radius: 24px
     transition: background-color 0.3s, ease 0.3s
 
+  @media (max-width: 639px)
+    padding-top: 15px
+
   &:hover
     @media (min-width: 640px)
       background-color: #FBF7FC
