--- a/marmelad/_blocks/article-content/article-content.styl
+++ b/marmelad/_blocks/article-content/article-content.styl
@@ -200,7 +200,7 @@
       color: #000
       font-family: $fonts.textFont
       font-weight: 400
-      line-height: 1.2
+      line-height: 1.3
       margin-top: 0
       margin-bottom: 30px
 
@@ -267,17 +267,17 @@
 
       li
         text-align: left
-        margin-bottom: 30px
+        // margin-bottom: 30px
         padding-left: 8px
 
-        span
-          font-size: 20px
-          color: #000
-          font-family: $fonts.textFont
-          font-weight: 400
-          line-height: 1.2
-          margin-top: 0
-          margin-bottom: 30px
+        // p
+        //   font-size: 20px
+        //   color: #000
+        //   font-family: $fonts.textFont
+        //   font-weight: 400
+        //   line-height: 1.2
+        //   margin-top: 0
+        //   margin-bottom: 30px
 
   &__video
     width: 100%
